--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PlexStream</title>
+    <title>Multi-Broadcaster Livestream</title>
     <style>
-        video { width: 400px; border: 1px solid #000; }
+        video { width: 300px; border: 1px solid #000; margin: 5px; }
         button { margin: 10px; padding: 10px; }
         #chat { margin: 10px; }
         #messages { border: 1px solid #ccc; height: 200px; overflow-y: scroll; padding: 10px; }
         #chatInput { width: 300px; padding: 5px; }
+        #streamList { margin: 10px; }
     </style>
 </head>
 <body>
-    <h2>PlexStream</h2>
-    <div>
-        <video id="broadcasterVideo" autoplay playsinline></video>
-        <video id="viewerVideo" autoplay playsinline></video>
+    <h2>Multi-Broadcaster Livestream</h2>
+    <div id="videos"></div>
+    <button onclick="startBroadcast()">Start My Broadcast</button>
+    <div id="streamList">
+        <h3>Available Streams</h3>
+        <ul id="streamListUl"></ul>
     </div>
-    <button onclick="startBroadcast()">Start Broadcast</button>
-    <button onclick="watchBroadcast()">Watch Broadcast</button>
     <div id="chat">
         <h3>Chat</h3>
         <div id="messages"></div>
@@ -26,68 +27,124 @@
     </div>
 
     <script>
-        let peerConnection;
-        const config = { iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] };
-        const broadcasterVideo = document.getElementById('broadcasterVideo');
-        const viewerVideo = document.getElementById('viewerVideo');
+        const socket = new WebSocket('ws://localhost:8080');
+        const videosDiv = document.getElementById('videos');
+        const streamListUl = document.getElementById('streamListUl');
         const messagesDiv = document.getElementById('messages');
         const chatInput = document.getElementById('chatInput');
-        const socket = new WebSocket('ws://localhost:8080');
+        const peerConnections = {};
+        const config = { iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] };
+        let myStreamId = null;
+
+        socket.onopen = () => {
+            socket.send(JSON.stringify({ type: 'getStreams' }));
+        };
 
         socket.onmessage = async ({ data }) => {
             const message = JSON.parse(data);
-            if (message.offer) {
-                await peerConnection.setRemoteDescription(new RTCSessionDescription(message.offer));
-                const answer = await peerConnection.createAnswer();
-                await peerConnection.setLocalDescription(answer);
-                socket.send(JSON.stringify({ answer }));
-            } else if (message.answer) {
-                await peerConnection.setRemoteDescription(new RTCSessionDescription(message.answer));
-            } else if (message.iceCandidate) {
-                await peerConnection.addIceCandidate(new RTCIceCandidate(message.iceCandidate));
-            } else if (message.chat) {
+            if (message.type === 'streams') {
+                updateStreamList(message.streams);
+            } else if (message.type === 'offer') {
+                handleOffer(message);
+            } else if (message.type === 'answer') {
+                handleAnswer(message);
+            } else if (message.type === 'iceCandidate') {
+                handleIceCandidate(message);
+            } else if (message.type === 'chat') {
                 const msg = document.createElement('p');
-                msg.textContent = message.chat;
+                msg.textContent = message.message;
                 messagesDiv.appendChild(msg);
                 messagesDiv.scrollTop = messagesDiv.scrollHeight;
             }
         };
 
         async function startBroadcast() {
-            peerConnection = new RTCPeerConnection(config);
+            myStreamId = Math.random().toString(36).substring(2, 10);
             const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-            broadcasterVideo.srcObject = stream;
-            stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
+            const video = document.createElement('video');
+            video.id = `video-${myStreamId}`;
+            video.srcObject = stream;
+            video.autoplay = true;
+            video.playsinline = true;
+            videosDiv.appendChild(video);
+            socket.send(JSON.stringify({ type: 'newStream', streamId: myStreamId }));
+        }
+
+        async function watchStream(streamId) {
+            const peerConnection = new RTCPeerConnection(config);
+            peerConnections[streamId] = peerConnection;
+
+            peerConnection.ontrack = ({ streams: [stream] }) => {
+                const video = document.createElement('video');
+                video.id = `video-${streamId}`;
+                video.srcObject = stream;
+                video.autoplay = true;
+                video.playsinline = true;
+                videosDiv.appendChild(video);
+            };
 
             peerConnection.onicecandidate = ({ candidate }) => {
-                if (candidate) socket.send(JSON.stringify({ iceCandidate: candidate }));
+                if (candidate) {
+                    socket.send(JSON.stringify({ type: 'iceCandidate', streamId, candidate, to: streamId }));
+                }
             };
 
             const offer = await peerConnection.createOffer();
             await peerConnection.setLocalDescription(offer);
-            socket.send(JSON.stringify({ offer }));
+            socket.send(JSON.stringify({ type: 'offer', streamId: myStreamId || 'viewer', offer, to: streamId }));
         }
 
-        async function watchBroadcast() {
-            peerConnection = new RTCPeerConnection(config);
-            peerConnection.ontrack = ({ streams: [stream] }) => {
-                viewerVideo.srcObject = stream;
-            };
+        async function handleOffer({ streamId, offer, from }) {
+            if (!peerConnections[from]) {
+                const peerConnection = new RTCPeerConnection(config);
+                peerConnections[from] = peerConnection;
 
-            peerConnection.onicecandidate = ({ candidate }) => {
-                if (candidate) socket.send(JSON.stringify({ iceCandidate: candidate }));
-            };
+                const stream = document.getElementById(`video-${myStreamId}`).srcObject;
+                stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
+
+                peerConnection.onicecandidate = ({ candidate }) => {
+                    if (candidate) {
+                        socket.send(JSON.stringify({ type: 'iceCandidate', streamId: myStreamId, candidate, to: from }));
+                    }
+                };
+
+                await peerConnection.setRemoteDescription(new RTCSessionDescription(offer));
+                const answer = await peerConnection.createAnswer();
+                await peerConnection.setLocalDescription(answer);
+                socket.send(JSON.stringify({ type: 'answer', streamId: myStreamId, answer, to: from }));
+            }
+        }
+
+        async function handleAnswer({ streamId, answer, from }) {
+            if (peerConnections[from]) {
+                await peerConnections[from].setRemoteDescription(new RTCSessionDescription(answer));
+            }
+        }
+
+        async function handleIceCandidate({ streamId, candidate, from }) {
+            if (peerConnections[from]) {
+                await peerConnections[from].addIceCandidate(new RTCIceCandidate(candidate));
+            }
+        }
+
+        function updateStreamList(streams) {
+            streamListUl.innerHTML = '';
+            streams.forEach(streamId => {
+                const li = document.createElement('li');
+                li.textContent = `Stream ${streamId}`;
+                li.onclick = () => watchStream(streamId);
+                streamListUl.appendChild(li);
+            });
         }
 
         function sendMessage() {
             const message = chatInput.value.trim();
             if (message) {
-                socket.send(JSON.stringify({ chat: message }));
+                socket.send(JSON.stringify({ type: 'chat', message }));
                 chatInput.value = '';
             }
         }
 
-        // Allow sending message with Enter key
         chatInput.addEventListener('keypress', (e) => {
             if (e.key === 'Enter') sendMessage();
         });
