--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Multi-Broadcaster Livestream</title>
+    <title>PlexStream</title>
     <style>
         video { width: 300px; border: 1px solid #000; margin: 5px; }
         button { margin: 10px; padding: 10px; }
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h2>Multi-Broadcaster Livestream</h2>
+    <h2>PlexStream/h2>
     <div id="videos"></div>
     <button onclick="startBroadcast()">Start My Broadcast</button>
     <div id="streamList">
