--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h2>PlexStream/h2>
+    <h2>PlexStream<h2>
     <div id="videos"></div>
     <button onclick="startBroadcast()">Start My Broadcast</button>
     <div id="streamList">
