--- a/index.html
+++ b/index.html
@@ -440,5 +440,22 @@ function renderChatLine(user, text){
 })();
 
 </script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyAyiiWVeRjxSsxUE8fR1DyCPEZwt7o3iHc",
+    authDomain: "plexstream-ef9b4.firebaseapp.com",
+    projectId: "plexstream-ef9b4",
+    storageBucket: "plexstream-ef9b4.firebasestorage.app",
+    messagingSenderId: "130967153299",
+    appId: "1:130967153299:web:e424baeb43541f1401bb66"
+  };
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </body>
    </html>
